--- a/index.css
+++ b/index.css
@@ -5,6 +5,13 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+body, #text {
+    transition: all 1s ease-in-out;
+}
+#text {
+    text-align: center;
+}
+
 #header {
     position: absolute;
     top: 0;
@@ -26,4 +33,17 @@ h1 {
     top: 50vh;
     left: 50vw;
     transform: translateY(-50%) translateX(-50%);
+}
+
+#sid {
+    position: absolute;
+    transition: all 2s ease-in-out;
+    top: 0;
+    left: 0;
+}
+#gunnar {
+    position: absolute;
+    transition: all 2s ease-in-out;
+    top: 50vh;
+    right: 0;
 }
